ver 2.2 ready : methods & params changes ; dispatch token for meanwhile -> sessionCode
